# juniper-data

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEVELOPMENT_ROADMAP.md  Dockerfile  LICENSE  README.md  con  conda_environment.yaml  conda_environment_ci.yaml  demo  markdown.css  pyproject.toml  requirements.txt  requirements_ci.txt  src  tests  try
.github/: CODEOWNERS  dependabot.yml
.github/instructions/: copilot-instructions.md
.github/workflows/: bla  ci.yml  codeql.yml  lockfile-update.yml  publish.yml  security-scan.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
conf/: __date_functions.conf  __git_log_weeks.conf  app_config.yaml  common-ORIG.conf  common.conf  common_functions.conf  conda_environment-OLD.yaml  conda_environment-ORIG_0.1.yaml  conda_environment.yaml  conda_environment_ci.yaml  config_fail.conf  get_code_stats.conf  get_code_stats_fn.conf  get_code_stats_functions.conf  get_file_lines.conf  get_file_todo.conf  get_file_todo_fn.conf  get_file_todo_functions.conf  get_module_filenames.conf  get_module_filenames_fn.conf  get_module_filenames_functions.conf  get_script_path.conf  get_script_path_functions.conf  get_todo_comments.conf  get_todo_comments_functions.conf  git_branch_ages.conf  init.conf  init_fn.conf  juniper_canopy.conf  juniper_canopy_functions.conf  juniper_data.conf  juniper_data_functions.conf  last_mod_update.conf  log_colors.conf  logging.conf  logging_colors.conf  logging_config-CANOPY.yaml  logging_config-CASCOR.yaml  logging_config.yaml  logging_functions.conf  (+14 more)
conf/layouts/: metrics_layouts.json
docs/: CONSTANTS_GUIDE.md  DEVELOPER_CHEATSHEET.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_OVERVIEW.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_PLAN.md  QUICK_START.md  REFERENCE.md  USER_MANUAL.md
docs/api/: API_REFERENCE.md  API_SCHEMAS.md  JUNIPER_DATA_API.md
docs/cascor/: CASCOR_BACKEND_MANUAL.md  CASCOR_BACKEND_QUICK_START.md  CASCOR_BACKEND_REFERENCE.md
docs/cassandra/: CASSANDRA_INTEGRATION_MANUAL.md  CASSANDRA_INTEGRATION_QUICK_START.md  CASSANDRA_INTEGRATION_REFERENCE.md
docs/ci_cd/: CICD_MANUAL.md  CICD_QUICK_START.md  CICD_REFERENCE.md
docs/demo/: DEMO_MODE_ENVIRONMENT_SETUP.md  DEMO_MODE_MANUAL.md  DEMO_MODE_QUICK_START.md  DEMO_MODE_REFERENCE.md
docs/deployment/: KUBERNETES_DEPLOYMENT_PLAN.md
docs/history/: TASK_2025-12-04.txt
docs/phase0/: README.md
docs/phase1/: README.md
docs/phase2/: README.md
docs/phase3/: README.md
docs/redis/: REDIS_INTEGRATION_MANUAL.md  REDIS_INTEGRATION_QUICK_START.md  REDIS_INTEGRATION_REFERENCE.md
docs/testing/: SELECTIVE_TEST_ENABLEMENT_SUMMARY.md  SELECTIVE_TEST_GUIDE.md  TESTING_ANALYSIS_REPORT.md  TESTING_ENVIRONMENT_SETUP.md  TESTING_MANUAL.md  TESTING_QUICK_START.md  TESTING_REFERENCE.md  TESTING_REPORTS_COVERAGE.md  TEST_ENABLEMENT_QUICK_REFERENCE.md
juniper_data/: __init__.py  __main__.py
juniper_data.egg-info/: PKG-INFO  SOURCES-ORIG.txt  SOURCES.txt  requires.txt  top_level-ORIG.txt  top_level.txt
juniper_data/api/: app.py  middleware.py  observability.py  security.py  settings.py
juniper_data/core/: __init__.py  artifacts.py  dataset_id.py  models.py  split.py
juniper_data/generators/: __init__.py
juniper_data_client/: .coverage  README.md  __init__.py  client.py  exceptions.py  pyproject.toml
juniper_data_client/juniper_data_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
juniper_data_client/tests/: test_client.py
notes/: CASCOR-AUDIT_CROSS-REFERENCES_2026-02-18.md  CODE_COVERAGE_FIX.md  CONDA_DEPENDENCY_FILE_HEADER.md  DEMO_HANG_ANALYSIS_2026-01-03.md  DEPENDENCY_UPDATE_WORKFLOW.md  FIX_DEFAULT_SCALE_2025-12-13.md  FIX_TESTING_ISSUES_2026-01-05.md  INTEGRATION_DEVELOPMENT_PLAN.md  INTEGRATION_ROADMAP.md  JUNIPER-DATA_POST-RELEASE_DEVELOPMENT-ROADMAP.md  MONOREPO_ANALYSIS.md  PIP_DEPENDENCY_FILE_HEADER.md  POLYREPO_MIGRATION_PLAN.md  PRE-DEPLOYMENT_ROADMAP-2.md  PR_DESCRIPTION_PHASE3-WAVE-1_2026-01-09.md  PR_DESCRIPTION_PRIORITY-3.0_2026-01-08.md  PR_PHASE0_UX_STABILIZATION_2026-01-07.md  PR_PHASE1_PHASE2_COMPLETE_2026-01-08.md  PR_PHASE1_VALIDATION_2026-01-07.md  RELEASE_NOTES_v0.14.0-alpha.md  RELEASE_NOTES_v0.14.1-alpha.md  RELEASE_NOTES_v0.15.0-alpha.md  RELEASE_NOTES_v0.15.1-alpha.md  RELEASE_NOTES_v0.15.1-alpha_2026-01-08.md  TEMPLATE_SECURITY_RELEASE_NOTES.md  TEST_SUITE_AUDIT_DATA_CLAUDE.md  TEST_SUITE_AUDIT_REPORT.md  TEST_SUITE_CICD_AUDIT_REPORT_20260203_170839.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_AMP.md  TEST_SUITE_CICD_ENHANCEMENT_DEVELOPMENT_PLAN_CLAUDE.md  THREAD_HANDOFF_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE.md  WORKTREE_CLEANUP_PROCEDURE_V2.md  WORKTREE_SETUP_PROCEDURE.md  claude-code-serena-setup-guide.md  conda_environment.yaml  juniper-data_OTHER_DEPENDENCIES.md  reqs.txt  requirements-conda.txt  (+2 more)
reports/: coverage.xml
scripts/: check_doc_links.py  check_module_coverage.py
snapshots/: snapshot_history.jsonl
src/: .coverage  __init__.py  __main__.py  config_manager.py  constants.py  demo_mode.py  main.py
util/: ._2025-12-23_15:08:23.  ._2025-12-23_15:08:24.  __get_os_name.bash  __get_project_dir.bash  __git_log_weeks.bash  blo.bash  change_path.bash  check_multiprocess_forkserver.bash  check_multiprocess_start.bash  color_display_codes.bash  conda_env_update.bash  create_performance_profile.bash  get_code_stats.bash  get_file_lines.bash  get_file_todo.bash  get_module_filenames.bash  get_script_path.bash  get_todo_comments.bash  git_branch_ages.bash  impatient_testing.bash  juniper_canopy-demo.bash  juniper_canopy.bash  juniper_cascor.bash  juniper_data.bash  last_mod_update-ORIG.bash  last_mod_update-local.bash  last_mod_update.bash  main.bash  make.bash  no_canopy.bash  path_overlap.bash  profile_training.bash  proto.bash  random_seed.bash  rsink.bash  run.bash  run_all_tests.bash  run_demo.bash  run_tests.bash  save_to_usb.bash  (+8 more)
(+215 files in other folders)
