#####################################################################################################################################################################################################
# Project:       Juniper
# Sub-Project:   JuniperData
# Application:   juniper_data
# File Name:     pyproject.toml
# Author:        Paul Calnon
# Version:       0.1.0
#
# Date Created:  2026-01-29
# Last Modified: 2026-01-29
#
# License:       MIT License
# Copyright:     Copyright (c) 2024-2026 Paul Calnon
#
# Description:
#    Python project configuration for Juniper Data
#    Dataset generation and management service for the Juniper ecosystem
#
# References:
#    - JuniperCascor project patterns
#####################################################################################################################################################################################################

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-data"
version = "0.1.0"
description = "Dataset generation and management service for the Juniper ecosystem"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic-settings>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
all = [
    "juniper-data[api,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["juniper_data*"]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.pytest_cache
    | \.trunk
    | __pycache__
    | data
    | logs
    | reports
    | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".pytest_cache", ".trunk", "data", "logs", "reports", "htmlcov"]
skip_glob = ["*/data/*", "*/logs/*", "*/reports/*"]
known_first_party = ["juniper_data"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "-p", "no:warnings",
    "--strict-markers",
    "--strict-config",
    "--continue-on-collection-errors",
    "--tb=short",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for full workflows",
    "performance: Performance and benchmarking tests",
    "slow: Tests that take a long time to run",
    "spiral: Tests specifically for spiral dataset generation",
    "api: Tests for API endpoints",
    "generators: Tests for data generators",
    "storage: Tests for storage operations",
]
timeout = 60
timeout_method = "signal"

[tool.coverage.run]
source = ["juniper_data"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/data/*",
    "*/logs/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "^data/",
    "^logs/",
    "^reports/",
    "^htmlcov/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pydantic.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true
