#####################################################################################################################################################################################################
# Project:       Juniper
# Sub-Project:   JuniperData
# Application:   juniper_data
# File Name:     pyproject.toml
# Author:        Paul Calnon
# Version:       0.4.0
#
# Date Created:  2026-01-29
# Last Modified: 2026-02-06
#
# License:       MIT License
# Copyright:     Copyright (c) 2024,2025,2026 Paul Calnon
#
# Description:
#    Python project configuration for Juniper Data
#    Dataset generation and management service for the Juniper ecosystem
#
# References:
#    - JuniperCascor project patterns
#    - JUNIPER-DATA-001: CI/CD Pipeline Setup
#####################################################################################################################################################################################################

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-data"
version = "0.4.2"
description = "Dataset generation and management service for the Juniper ecosystem"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
# requires-python = ">=3.11"
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
arc-agi = [
    "arc-agi>=0.9.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic-settings>=2.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.24.0",
    "coverage[toml]>=7.0.0",
    "juniper-data-client>=0.3.0",
]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.0.0",
    "bandit[sarif]>=1.7.9",
    "pip-audit>=2.7.0",
    "pre-commit>=3.0.0",
]
all = [
    "juniper-data[api,arc-agi,dev,test]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["juniper_data*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "B",      # flake8-bugbear (includes B9xx opinionated)
    "C4",     # flake8-comprehensions
    "I",      # isort (replaces standalone isort)
    "UP",     # pyupgrade (replaces standalone pyupgrade)
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
]
ignore = [
    "E203",   # whitespace before ':' (formatter conflict)
    "E265",   # block comment should start with '# '
    "E266",   # too many leading '#' for block comment
    "E501",   # line too long (formatter handles this)
    "E402",   # module level import not at top of file
    "E226",   # missing whitespace around arithmetic operator
    "C409",   # unnecessary-literal-within-tuple-call (style preference)
    "SIM102", # collapsible-if (style preference)
    "SIM105", # use-contextlib-suppress (style preference)
    "SIM117", # multiple-with-statements (style preference, keeps code clearer)
    "B904",   # raise-without-from-inside-except
    "B905",   # zip-without-explicit-strict
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"juniper_data/__main__.py" = ["T201"]
"juniper_data/api/routes/*.py" = ["B008"]
"juniper_data/tests/**/*.py" = ["F841", "C901"]
"juniper_data/tests/fixtures/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["juniper_data"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.bandit]
exclude_dirs = ["tests", "reports", "logs", "htmlcov", "data"]
skips = ["B101", "B311"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["juniper_data/tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--benchmark-disable",
]
# Filter expected deprecation warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning:uvicorn.*",
    "ignore::DeprecationWarning:httpx.*",
    "ignore::PendingDeprecationWarning:pydantic.*",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for full workflows",
    "performance: Performance and benchmarking tests",
    "slow: Tests that take a long time to run",
    "spiral: Tests specifically for spiral dataset generation",
    "api: Tests for API endpoints",
    "generators: Tests for data generators",
    "storage: Tests for storage operations",
]
timeout = 60
timeout_method = "signal"

[tool.coverage.run]
source_pkgs = ["juniper_data"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/data/*",
    "*/logs/*",
    # "*/__main__.py",
    # "*/api/*",
]
branch = true

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "^\\s*pass\\s*$",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^data/",
    "^logs/",
    "^reports/",
    "^htmlcov/",
]

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pydantic.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# Relaxed type checking for test code
[[tool.mypy.overrides]]
module = [
    "juniper_data.tests.*",
]
# allow_untyped_defs = true
disallow_untyped_defs = false
